# ggml

./: .gitignore
docs/: GGML-Training-Guide.md
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  demo-backend.cpp  demo-eval.cpp  demo-train.cpp  eval.json  gguf-parse.py  model.cpp  model.h  train.json
examples/demo/configs/: train.json
examples/include/nlohmann/: json.hpp
examples/mnist/: mnist-common.cpp  mnist-train.cpp
include/: ggml-opt.h
src/: ggml-backend.cpp  ggml-opt.cpp  ggml.c
tests/: test-opt.cpp
